--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,7 +18,7 @@ spring:
         serverName: ${node:127.0.0.1}
         portNumber: ${port:5433}
         databaseName: ${dbname:yugabyte}
-        topologyKeys: "aws.us-west-2.*"
+        #topologyKeys: "aws.us-west-2.*"
         #additionalEndpoints: 127.0.0.2:5433,127.0.0.3:5433
         #ssl: ${ssl:false}
         #sslmode: ${sslmode:disable}
